# vscode-profiles

./: .gitignore  README.md  pyproject.toml  vscode-profiles.yaml
docs/: vision.md
src/vscode_profiles/: cli.py  config.py  sync.py  vscode.py
